fix: rewrite in a lower java version to support build in jdk8.